# CGUI

./: CMakeLists.txt  LICENSE
include/: computer_info.h  config.hpp  enum.hpp  logger.hpp  string.hpp  window.h
lib/: test.cpp
src/: computer_info.cpp  logger.cpp  main.cpp  test_borderless.cpp  test_get_only_file.cpp  test_logger.cpp  test_logger_features.cpp  test_logger_init.cpp  util.cpp
src/linux/: window.cpp
src/windows/: system.cpp  window.cpp
